# summary-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml
project/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
