[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Giorgos Tharropoulos <Giorgos Tharropoulos>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
asyncpg = "^0.23.0"
tortoise-orm = ">=0.16.21"
pytest = "6.2.2"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
