[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Giorgos Tharropoulos <Giorgos Tharropoulos>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
asyncpg = "^0.23.0"
tortoise-orm = ">=0.16.21"
pytest = "6.2.2"
requests = "2.25.1"
gunicorn = "20.0.4"
pytest-cov = "2.11.1"
flake8 = "3.8.4"
black = "20.8b1"
isort = "5.7.0"
pytest-xdist = "2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
